--- a/app/src/main/res/layout/fragment_import_private_key.xml
+++ b/app/src/main/res/layout/fragment_import_private_key.xml
@@ -21,67 +21,23 @@
         app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/ibBack"/>
 
-    <RelativeLayout
-        android:id="@+id/layout_title"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/label_log_in"
+        android:textSize="@dimen/text_size_big"
+        android:textColor="@color/colorBlack"
+        android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/ibBack"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <TextView
-            android:id="@+id/tvUserName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Harmen Porter"
-            android:textSize="@dimen/text_size_big"
-            android:textColor="@color/colorBlack"
-            android:textStyle="bold"
-            android:layout_alignParentStart="true"/>
-    </RelativeLayout>
-
-    <LinearLayout
-        android:id="@+id/layout_confirm_email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/layout_title"
-        android:layout_marginTop="@dimen/activity_margin_24dp"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/text_size_large"
-            android:textColor="@color/colorPutty"
-            android:text="@string/text_message_confirm_email_login_1"
-        />
-
-        <TextView
-            android:id="@+id/tvConfirmEmail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/text_size_large"
-            android:textColor="@color/colorPutty"
-            android:text="exa****@mail.com?"
-            android:textStyle="bold"
-        />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/text_size_large"
-            android:textColor="@color/colorPutty"
-            android:layout_marginTop="6dp"
-            android:text="@string/text_message_confirm_email_login_2"
-        />
-
-    </LinearLayout>
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <RelativeLayout
         android:id="@+id/layout_input_key"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/layout_confirm_email"
-        android:layout_marginTop="@dimen/activity_margin_18dp"
+        app:layout_constraintTop_toBottomOf="@+id/title"
+        android:layout_marginTop="@dimen/activity_margin_48dp"
         android:background="@drawable/bubble_background">
 
         <EditText
@@ -90,9 +46,9 @@
             android:inputType="numberPassword"
             android:textSize="@dimen/text_size_large"
             android:maxLength="6"
-            android:hint="@string/text_holder_user_password"
-            android:id="@+id/etUserPassword"
-            android:drawableLeft="@drawable/ic_password"
+            android:hint="@string/text_holder_private_key"
+            android:id="@+id/etUserPrivateKey"
+            android:drawableLeft="@drawable/ic_key"
             android:drawablePadding="@dimen/activity_margin_12dp"
             android:paddingVertical="@dimen/activity_margin_12dp"
             android:paddingHorizontal="@dimen/activity_margin_16dp"
@@ -101,10 +57,10 @@
             android:layout_toStartOf="@+id/btnShowPassword"/>
 
         <ImageView
-            android:id="@+id/btnShowPassword"
+            android:id="@+id/btnScanPrivateKey"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_show_password"
+            android:src="@drawable/ic_scan"
             android:paddingHorizontal="@dimen/activity_margin_16dp"
             android:paddingVertical="@dimen/activity_margin_12dp"
             android:layout_alignParentEnd="true"
@@ -112,12 +68,62 @@
 
     </RelativeLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/tvWarning"
+        android:layout_marginTop="@dimen/activity_margin_24dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_question_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorOrangish"
+            android:textSize="@dimen/text_size_large"
+            android:text="@string/text_question_login_1"
+            android:drawableLeft="@drawable/ic_help"
+            android:drawableTint="@color/colorOrangish"
+            android:layout_marginVertical="@dimen/activity_margin_8dp"
+            android:gravity="center"
+            android:drawablePadding="@dimen/activity_margin_8dp"
+        />
+
+        <TextView
+            android:id="@+id/tv_question_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorOrangish"
+            android:textSize="@dimen/text_size_large"
+            android:text="@string/text_question_login_2"
+            android:drawableLeft="@drawable/ic_help"
+            android:drawableTint="@color/colorOrangish"
+            android:layout_marginVertical="@dimen/activity_margin_8dp"
+            android:gravity="center"
+            android:drawablePadding="@dimen/activity_margin_8dp"
+        />
+
+        <TextView
+            android:id="@+id/tv_question_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorOrangish"
+            android:textSize="@dimen/text_size_large"
+            android:text="@string/text_question_login_3"
+            android:drawableLeft="@drawable/ic_help"
+            android:drawableTint="@color/colorOrangish"
+            android:layout_marginVertical="@dimen/activity_margin_8dp"
+            android:gravity="center"
+            android:drawablePadding="@dimen/activity_margin_8dp"
+        />
+    </LinearLayout>
+
     <TextView
-        android:id="@+id/btnLogin"
+        android:id="@+id/btnNext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/drawable_btn_green_gradient_selector"
-        android:text="@string/label_button_login"
+        android:text="@string/label_button_next"
         android:layout_marginBottom="@dimen/activity_margin_24dp"
         android:textColor="@color/colorWhite"
         android:enabled="false"
@@ -134,7 +140,7 @@
         android:id="@+id/tvWarning"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/text_message_incorrect_password"
+        android:text="@string/text_message_incorrect_key"
         android:layout_marginTop="@dimen/activity_margin_16dp"
         android:padding="@dimen/activity_margin_12dp"
         android:textColor="@color/colorOrangish"
