--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,10 +46,52 @@
             android:layout_marginTop="@dimen/activity_margin_32dp"
             android:layout_below="@+id/title"/>
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true">
+
+            <ImageView
+                android:id="@+id/btnScanToken"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/bg_button_scan"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentTop="true"/>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_main_footer"
+                android:layout_below="@+id/btnScanToken"
+                android:layout_marginTop="-31.5dp"/>
+
+            <ImageView
+                android:id="@+id/ivArrowCheck"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_arrow_up_grey"
+                android:layout_below="@+id/btnScanToken"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/activity_margin_8dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Let’s check"
+                android:textStyle="bold"
+                android:textColor="@color/colorPutty"
+                android:layout_below="@+id/ivArrowCheck"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="4dp"
+                android:textSize="@dimen/text_size_xlarge"/>
+
+        </RelativeLayout>
+
     </RelativeLayout>
 
     <android.support.design.widget.NavigationView
-        android:layout_width="wrap_content"
+        android:layout_width="310dp"
         android:layout_height="match_parent"
         android:background="@android:color/transparent"
         android:layout_gravity="end"
