--- a/app/src/main/res/layout/layout_drawer_menu.xml
+++ b/app/src/main/res/layout/layout_drawer_menu.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" android:background="@drawable/bg_navigation"
+    android:background="@drawable/bg_navigation"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -40,7 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/activity_margin_24dp"
-            android:background="@drawable/bg_darkTurquoise_shadow_corners"
+            android:background="@drawable/bg_darkturquoise_shadow_corners"
             android:visibility="gone">
 
             <TextView
