--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/drawer_layout"
+    android:background="@android:color/white"
     tools:context=".MainActivity">
 
     <RelativeLayout
@@ -39,7 +40,7 @@
             android:layout_alignParentStart="true"
             android:layout_below="@+id/btnMenuMain"/>
 
-        <android.support.v4.view.ViewPager
+        <com.sneakers.sneakerschecker.customViews.CustomMainViewPager
             android:id="@+id/viewpagerMain"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -91,7 +92,7 @@
     </RelativeLayout>
 
     <android.support.design.widget.NavigationView
-        android:layout_width="310dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:background="@android:color/transparent"
         android:layout_gravity="end"
