--- a/app/src/main/res/layout/fragment_import_private_key.xml
+++ b/app/src/main/res/layout/fragment_import_private_key.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:paddingTop="@dimen/activity_margin_18dp"
     android:paddingHorizontal="@dimen/activity_margin_24dp"
-    tools:context=".screens.authenticationScreen.LoginFragment">
+    tools:context=".screens.fragment.LoginFragment">
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -19,7 +19,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="@dimen/activity_margin_16dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/ibBack"/>
+        android:id="@+id/btnBack"/>
 
     <TextView
         android:id="@+id/title"
@@ -29,7 +29,7 @@
         android:textSize="@dimen/text_size_big"
         android:textColor="@color/colorBlack"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/ibBack"
+        app:layout_constraintTop_toBottomOf="@+id/btnBack"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <RelativeLayout
@@ -43,7 +43,6 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="numberPassword"
             android:textSize="@dimen/text_size_large"
             android:maxLength="6"
             android:hint="@string/text_holder_private_key"
