--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:paddingTop="@dimen/activity_margin_18dp"
     android:paddingHorizontal="@dimen/activity_margin_24dp"
-    tools:context=".screens.authenticationScreen.LoginFragment">
+    tools:context=".screens.fragment.LoginFragment">
 
     <ImageButton
         android:layout_width="wrap_content"
