--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,9 +19,11 @@
     <dimen name="activity_margin_16dp">16dp</dimen>
     <dimen name="activity_margin_18dp">18dp</dimen>
     <dimen name="activity_margin_20dp">20dp</dimen>
+    <dimen name="activity_margin_22dp">22dp</dimen>
     <dimen name="activity_margin_24dp">24dp</dimen>
     <dimen name="activity_margin_28dp">28dp</dimen>
     <dimen name="activity_margin_32dp">32dp</dimen>
+    <dimen name="activity_margin_34dp">34dp</dimen>
     <dimen name="activity_margin_36dp">36dp</dimen>
     <dimen name="activity_margin_48dp">48dp</dimen>
     <dimen name="activity_margin_56dp">56dp</dimen>
