--- a/app/src/main/res/layout/activity_confirm_register.xml
+++ b/app/src/main/res/layout/activity_confirm_register.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".screens.activity.ConfirmRegisterActivity"
     android:background="@android:color/white"
+    android:paddingTop="@dimen/activity_margin_16dp"
     android:orientation="vertical">
 
     <ImageView
@@ -24,12 +25,13 @@
         android:layout_height="match_parent"
         android:layout_weight="1">
 
-        <android.support.v4.view.ViewPager
+        <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewpager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/activity_margin_8dp">
 
-        </android.support.v4.view.ViewPager>
+        </androidx.viewpager.widget.ViewPager>
 
         <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
             android:id="@+id/dotsIndicator"
@@ -37,18 +39,17 @@
             android:layout_height="wrap_content"
             app:dotsColor="@color/colorOrangish_alpha_15"
             app:dotsCornerRadius="8dp"
-            app:dotsSize="16dp"
+            app:dotsSize="8dp"
             app:dotsSpacing="4dp"
-            app:dotsWidthFactor="2.5"
+            app:dotsWidthFactor="5"
             app:selectedDotColor="@color/colorOrangish"
-            app:progressMode="true"
             android:layout_gravity="bottom|center_horizontal"
             android:layout_marginBottom="24dp"
         />
 
     </FrameLayout>
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="115dp"
         app:cardCornerRadius="4dp"
@@ -92,11 +93,11 @@
                 android:id="@+id/tvPrivateKey"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/text_size_large"
+                android:textSize="@dimen/text_size_xlarge"
                 android:textColor="@color/colorOrangish"/>
 
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
