--- a/app/src/main/res/layout/fragment_authentication.xml
+++ b/app/src/main/res/layout/fragment_authentication.xml
@@ -11,7 +11,7 @@
     <ImageView android:layout_width="match_parent" android:layout_height="match_parent"
                android:src="@mipmap/test_background" android:scaleType="fitXY"/>
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:paddingHorizontal="@dimen/layout_padding_Horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -80,5 +80,5 @@
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginTop="130dp"
                 app:layout_constraintTop_toTopOf="parent"/>
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
