--- a/app/src/main/res/layout/fragment_create_new.xml
+++ b/app/src/main/res/layout/fragment_create_new.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingHorizontal="@dimen/activity_margin_24dp"
+    android:id="@+id/root"
     tools:context=".screens.fragment.CreateNewFragment">
 
     <ImageButton
